# first_k8s_projects

manifests/: create-table-job.yaml  mysql-pod.yaml  mysql-service.yaml  nginx-pod.yaml  nginx-service.yaml  pv-for-mysql.yaml  pvc-for-mysql.yaml  rust-back-service.yaml  rust-back2-service.yaml  rust-pod.yaml  rust-pod2.yaml  web-deployment.yaml
mysql_db/: Dockerfile  init.sql
nginx/: Dockerfile
nginx/html/: index.html
rust_back/: Cargo.toml  Dockerfile
rust_back/src/: lib.rs  main.rs
rust_back2/: Cargo.toml  Dockerfile
rust_back2/src/: main.rs
table_job_rust/: Cargo.toml  Dockerfile
table_job_rust/src/: main.rs
