[package]
name = "rust_back"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
mysql = "*"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
actix-cors = "0.5.3"
reqwest = { version="0.11", features = ["json"]}
tokio = { version = "1" , features = ["full"]}