[package]
name = "rust_back2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
tokio = { version = "1.0" , features = ["full"]}
actix-web = "3"
actix-cors = "0.5.3"